--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
-        .soft-shadow { box-shadow: 0 4px 20px rgba(0, 137, 123, 0.15); } /* 陰影改為藍綠色調 */
+        .soft-shadow { box-shadow: 0 4px 20px rgba(0, 137, 123, 0.15); }
     </style>
     
     <script>
@@ -29,18 +29,14 @@
             theme: {
                 extend: {
                     colors: {
-                        // 新主題：溫泉藍綠色 (Onsen Teal)
+                        // 溫泉藍綠色主題 (Onsen Teal)
                         onsen: {
-                            100: '#E0F2F1', // 背景淺綠
-                            200: '#B2DFDB', // 裝飾淺綠
+                            100: '#E0F2F1', 
+                            200: '#B2DFDB', 
                             300: '#80CBC4',
-                            500: '#26A69A', // 主色
-                            600: '#00897B', // 深色文字/按鈕
+                            500: '#26A69A', 
+                            600: '#00897B', 
                             700: '#004D40',
-                        },
-                        // 警示色
-                        danger: {
-                            500: '#EF4444',
                         }
                     }
                 }
@@ -167,7 +163,7 @@
                     
                     <div class="bg-white rounded-2xl p-0 soft-shadow overflow-hidden border-2 border-red-100">
                         <div class="bg-red-50 p-3 text-red-600 font-bold flex justify-between items-center">
-                            <span><i class="fa-solid fa-user-doctor mr-2"></i>爸爸飲食紅綠燈 (Gout Alert)</span>
+                            <span><i class="fa-solid fa-user-doctor mr-2"></i>爸爸飲食紅綠燈</span>
                             <i class="fa-solid fa-traffic-light text-xl"></i>
                         </div>
                         <div class="p-4 space-y-3 text-sm">
@@ -175,7 +171,7 @@
                                 <div class="w-6 h-6 rounded-full bg-green-500 flex-shrink-0 flex items-center justify-center text-white text-xs shadow-md"><i class="fa-solid fa-check"></i></div>
                                 <div>
                                     <div class="font-bold text-green-600">綠燈 (放心食)</div>
-                                    <p class="text-gray-500 text-xs">華味鳥(雞肉/菜)、佐賀牛(燒/蒸)、阿蘇紅牛、炸豬扒。</p>
+                                    <p class="text-gray-500 text-xs">華味鳥(雞肉/菜)、佐賀牛(燒/蒸)、阿蘇紅牛。</p>
                                 </div>
                             </div>
                             <div class="flex items-start gap-3">
@@ -189,7 +185,7 @@
                                 <div class="w-6 h-6 rounded-full bg-red-500 flex-shrink-0 flex items-center justify-center text-white text-xs shadow-md"><i class="fa-solid fa-xmark"></i></div>
                                 <div>
                                     <div class="font-bold text-red-600">紅燈 (嚴禁飲湯)</div>
-                                    <p class="text-gray-500 text-xs font-bold">一蘭湯底、一幸舍濃湯、牛腸鍋湯底(最毒)。只食料，勿飲湯！</p>
+                                    <p class="text-gray-500 text-xs font-bold">一蘭湯底、一幸舍濃湯、牛腸鍋湯底。只食料，勿飲湯！</p>
                                 </div>
                             </div>
                         </div>
@@ -209,6 +205,52 @@
                             </div>
                         </div>
                         <div class="text-right text-xs text-gray-400">匯率: {{ exchangeRate }} (JPY -> HKD)</div>
+                    </div>
+
+                    <div class="bg-white rounded-2xl p-0 soft-shadow overflow-hidden">
+                        <div class="bg-gray-100 p-3 text-gray-600 font-bold flex justify-between">
+                            <span><i class="fa-solid fa-plane mr-2"></i>航班資訊 (CX)</span>
+                        </div>
+                        <div class="p-5">
+                            <div class="mb-4">
+                                <div class="flex justify-between text-xs text-gray-400 mb-1">
+                                    <span>4/9 去程 (HKG &rarr; FUK)</span>
+                                </div>
+                                <div class="flex justify-between items-center mb-1">
+                                    <div class="text-2xl font-bold text-slate-700">11:00</div>
+                                    <div class="h-0.5 w-10 bg-gray-200 relative flex justify-center">
+                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5"></i>
+                                    </div>
+                                    <div class="text-2xl font-bold text-slate-700">15:30</div>
+                                </div>
+                                <div class="flex justify-between text-sm font-bold bg-onsen-50 text-onsen-700 p-2 rounded-lg">
+                                    <span>CX588</span>
+                                    <span>香港 &rarr; 福岡</span>
+                                </div>
+                            </div>
+
+                            <div class="border-t border-dashed border-gray-200 my-4"></div>
+
+                            <div>
+                                <div class="flex justify-between text-xs text-gray-400 mb-1">
+                                    <span>4/14 回程 (FUK &rarr; HKG)</span>
+                                </div>
+                                <div class="flex justify-between items-center mb-1">
+                                    <div class="text-2xl font-bold text-slate-700">16:40</div>
+                                    <div class="h-0.5 w-10 bg-gray-200 relative flex justify-center">
+                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5 transform rotate-180"></i>
+                                    </div>
+                                    <div class="text-2xl font-bold text-slate-700">19:25</div>
+                                </div>
+                                <div class="flex justify-between text-sm font-bold bg-onsen-50 text-onsen-700 p-2 rounded-lg mb-2">
+                                    <span>CX589</span>
+                                    <span>福岡 &rarr; 香港</span>
+                                </div>
+                                <a href="https://www.google.com/search?q=CX589+flight+status" target="_blank" class="block w-full text-center py-2 rounded-lg border border-gray-300 text-gray-500 text-sm font-bold hover:bg-gray-50 transition-colors">
+                                    <i class="fa-solid fa-wifi mr-1"></i> 查看即時狀態
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="bg-white rounded-2xl p-0 soft-shadow overflow-hidden">
@@ -234,32 +276,6 @@
                             <div class="bg-gray-50 p-2 rounded text-xs text-gray-500">
                                 🚗 駕駛者: Day 1-2(早) 爸爸 | Day 2(午) 姑丈 | Day 3 姑丈/爸爸
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="bg-white rounded-2xl p-0 soft-shadow overflow-hidden">
-                        <div class="bg-gray-100 p-3 text-gray-600 font-bold flex justify-between">
-                            <span><i class="fa-solid fa-plane mr-2"></i>回程航班 (4/14)</span>
-                        </div>
-                        <div class="p-5">
-                            <div class="flex justify-between items-end mb-2">
-                                <div class="text-center">
-                                    <div class="text-3xl font-bold text-slate-700">FUK</div>
-                                    <div class="text-xs text-gray-400">福岡</div>
-                                </div>
-                                <i class="fa-solid fa-plane text-onsen-500 mb-2"></i>
-                                <div class="text-center">
-                                    <div class="text-3xl font-bold text-slate-700">HKG</div>
-                                    <div class="text-xs text-gray-400">香港</div>
-                                </div>
-                            </div>
-                            <div class="flex justify-between text-sm font-bold bg-gray-50 p-2 rounded-lg mb-2">
-                                <span>CX589</span>
-                                <span>16:40 起飛 (預計)</span>
-                            </div>
-                            <a href="https://www.google.com/search?q=CX589+flight+status" target="_blank" class="block w-full text-center py-2 rounded-lg border border-gray-300 text-gray-500 text-sm font-bold hover:bg-gray-50 transition-colors">
-                                <i class="fa-solid fa-wifi mr-1"></i> 查看即時狀態
-                            </a>
                         </div>
                     </div>
 
@@ -440,7 +456,7 @@
                     itineraryData: [
                         // Day 1: 4/9 福岡 -> 別府
                         [
-                            { id: 1, time: '15:30', title: '抵達福岡機場 & 取車', category: 'transport', desc: 'Noah/Alphard\n取車後爸爸負責駕駛 👨', transportType: 'car', location: '福岡機場國際線' },
+                            { id: 1, time: '15:30', title: '抵達福岡機場 (CX588)', category: 'transport', desc: 'Noah/Alphard\n取車後爸爸負責駕駛 👨', transportType: 'car', location: '福岡機場國際線' },
                             { id: 2, time: '17:00', title: '出發往別府', category: 'transport', desc: '爸爸開 ACC 輕鬆揸', transportType: 'car', travelTime: '2.5 hr' },
                             { id: 3, time: '19:30', title: '晚餐: 燒鳥 Torine', category: 'food', desc: 'Tel: 0977-21-1666\nMapcode: 46 405 528*58\n*西式餐桌食串燒\n⚠️ 痛風黃燈: 內臟少食', transportType: 'car', location: '焼き鳥 鳥ネ' },
                             { id: 4, time: '21:00', title: 'Check-in 御宿野乃', category: 'hotel', desc: 'Tel: 0977-21-5489\n泊 Hotel Tower Parking\n*任務: 去 Lawson 買媽媽床頭糧', transportType: 'car', location: '御宿 野乃別府' }
