--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                 <div class="flex justify-between items-center mb-1">
                                     <div class="text-2xl font-bold text-slate-700">16:40</div>
                                     <div class="h-0.5 w-10 bg-gray-200 relative flex justify-center">
-                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5 transform rotate-180"></i>
+                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5"></i>
                                     </div>
                                     <div class="text-2xl font-bold text-slate-700">19:25</div>
                                 </div>
