--- a/index.html
+++ b/index.html
@@ -214,18 +214,18 @@
                         <div class="p-5">
                             <div class="mb-4">
                                 <div class="flex justify-between text-xs text-gray-400 mb-1">
-                                    <span>4/9 去程 (HKG &rarr; FUK)</span>
+                                    <span>4/9 去程 (HKG → FUK)</span>
                                 </div>
                                 <div class="flex justify-between items-center mb-1">
                                     <div class="text-2xl font-bold text-slate-700">11:00</div>
                                     <div class="h-0.5 w-10 bg-gray-200 relative flex justify-center">
-                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5"></i>
+                                        <i class="fa-solid fa-plane text-onsen-500 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"></i>
                                     </div>
                                     <div class="text-2xl font-bold text-slate-700">15:30</div>
                                 </div>
                                 <div class="flex justify-between text-sm font-bold bg-onsen-50 text-onsen-700 p-2 rounded-lg">
                                     <span>CX588</span>
-                                    <span>香港 &rarr; 福岡</span>
+                                    <span>香港 → 福岡</span>
                                 </div>
                             </div>
 
@@ -233,18 +233,18 @@
 
                             <div>
                                 <div class="flex justify-between text-xs text-gray-400 mb-1">
-                                    <span>4/14 回程 (FUK &rarr; HKG)</span>
+                                    <span>4/14 回程 (FUK → HKG)</span>
                                 </div>
                                 <div class="flex justify-between items-center mb-1">
                                     <div class="text-2xl font-bold text-slate-700">16:40</div>
                                     <div class="h-0.5 w-10 bg-gray-200 relative flex justify-center">
-                                        <i class="fa-solid fa-plane text-onsen-500 absolute -top-2.5"></i>
+                                        <i class="fa-solid fa-plane text-onsen-500 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"></i>
                                     </div>
                                     <div class="text-2xl font-bold text-slate-700">19:25</div>
                                 </div>
                                 <div class="flex justify-between text-sm font-bold bg-onsen-50 text-onsen-700 p-2 rounded-lg mb-2">
                                     <span>CX589</span>
-                                    <span>福岡 &rarr; 香港</span>
+                                    <span>福岡 → 香港</span>
                                 </div>
                                 <a href="https://www.google.com/search?q=CX589+flight+status" target="_blank" class="block w-full text-center py-2 rounded-lg border border-gray-300 text-gray-500 text-sm font-bold hover:bg-gray-50 transition-colors">
                                     <i class="fa-solid fa-wifi mr-1"></i> 查看即時狀態
@@ -272,7 +272,6 @@
                                     <div class="text-xs text-gray-400">還車 (國際線)</div>
                                     <div class="font-bold">4/14 <span class="text-blue-500">13:45</span></div>
                                 </div>
-                            </div>
                             </div>
                         </div>
                     </div>
