--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         [
                             { id: 1, time: '15:30', title: '抵達福岡機場 (CX588)', category: 'transport', desc: 'Noah/Alphard\n取車後爸爸負責駕駛 👨', transportType: 'car', location: '福岡機場國際線' },
                             { id: 2, time: '17:00', title: '出發往別府', category: 'transport', desc: '爸爸開 ACC 輕鬆揸', transportType: 'car', travelTime: '2.5 hr' },
-                            { id: 3, time: '19:30', title: '晚餐: 燒鳥 Torine', category: 'food', desc: 'Tel: 0977-21-1666\nMapcode: 46 405 528*58\n*西式餐桌食串燒\n⚠️ 痛風黃燈: 內臟少食', dadAction: '餐廳門口係平路。車駛到門口放低爸爸，爸爸入去坐住等，司機再去泊車。', transportType: 'car', location: '焼き鳥 鳥ネ' },
+                            { id: 3, time: '19:30', title: '晚餐: 燒鳥 Torine', category: 'food', desc: 'Tel: 0977-21-1666\nMapcode: 46 405 528*58\n*西式餐桌食串燒\n⚠️ 痛風黃燈: 內臟少食', dadAction: '餐廳門口係平路。車駛到門口放低爸爸，爸爸入去坐住等，姑丈再去泊車。', transportType: 'car', location: '焼き鳥 鳥ネ' },
                             { id: 4, time: '21:00', title: 'Check-in 御宿野乃', category: 'hotel', desc: 'Tel: 0977-21-5489\n泊 Hotel Tower Parking\n*任務: 去 Lawson 買媽媽床頭糧', transportType: 'car', location: '御宿 野乃別府' }
                         ],
                         // Day 2: 4/10 別府 -> 黑川
