--- a/index.html
+++ b/index.html
@@ -407,8 +407,7 @@
                             { id: 615, time: '10:00', title: 'Full Full 明太子包 (二選一)', category: 'food', desc: 'A. Hakata店 (10:00開): 爸爸車上等，媽媽衝落去買\nB. 本店 (08:00開): 免費泊車，爸爸坐露天茶座等', dadAction: '睇情況二選一。本店比較舒服，有位坐。', transportType: 'car', location: 'Full Full Hakata' },
                             { id: 62, time: '11:00', title: '福岡機場 國內線', category: 'shopping', desc: '泊國內線場 (092-621-6059)\n*任務: 買努努雞 -> 即入喼', dadAction: '泊好車後，爸爸在 2F 土產店附近的櫈坐，其他人去掃努努雞。', transportType: 'car', location: '福岡機場 國內線' },
                             { id: 63, time: '12:00', title: '午餐 (二選一)', category: 'food', desc: '3F 拉麵滑走路 / 餐廳層\nA. 一幸舍 (濃湯)\nB. Oyama 牛腸鍋\n⚠️ 兩間湯底都極邪惡，爸爸只可食料!', dadAction: '這裡也有機會排隊。同樣策略：爸爸坐櫈/排隊線外圍等。', transportType: 'walk', location: '福岡機場' },
-                            { id: 64, time: '13:30', title: '前往國際線 落客', category: 'transport', desc: '爸爸/媽媽/姑姐/行李 落車', transportType: 'car', location: '福岡機場 國際線' },
-                            { id: 65, time: '13:45', title: '姑丈去還車', category: 'transport', desc: '姑丈獨自去還車', transportType: 'car' },
+                            { id: 65, time: '13:45', title: '還車', category: 'transport', desc: '還車', transportType: 'car' },
                             { id: 66, time: '14:30', title: 'Check-in CX589', category: 'flight', desc: '回港 👋', transportType: 'walk' }
                         ]
                     ],
