--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             
             <div class="absolute bottom-10 left-6 text-white text-shadow drop-shadow-md">
-                <h1 class="text-2xl font-bold tracking-widest">KYUSHU 2026</h1>
+                <h1 class="text-2xl font-bold tracking-widest">KYUSHU 2025</h1>
                 <p class="text-sm opacity-90">Family Road Trip & Onsen</p>
             </div>
         </div>
@@ -350,7 +350,7 @@
                         { name: '御宿 野乃別府', dates: '4/9', phone: '0977-21-5489' },
                         { name: '黒川温泉 深山山荘', dates: '4/10', phone: '0967-44-0553' },
                         { name: '御宿 野乃熊本 / REF', dates: '4/11' },
-                        { name: 'Hotel Forza Fukuoka', dates: '4/12 - 4/14', phone: '092-473-7111' }
+                        { name: 'Hotel JAL City Fukuoka Tenjin', dates: '4/12 - 4/14', phone: '092-712-7575' }
                     ],
 
                     itineraryData: [
@@ -389,25 +389,26 @@
                             { id: 42, time: '11:00', title: '出發往柳川', category: 'transport', desc: '爸爸負責駕駛 👨', transportType: 'car', travelTime: '1.5 hr' },
                             { id: 43, time: '12:30', title: '午餐: 柳川御花', category: 'food', desc: 'Tel: 0944-73-2189\n食「對月館」鰻魚飯\n*不坐船', dadAction: '停車場在正門對面。過條馬路入去就係，全程平路。', transportType: 'car', location: '柳川藩主立花邸 御花' },
                             { id: 44, time: '15:30', title: '太宰府天滿宮', category: 'sightseeing', desc: 'Mapcode: 55 364 013*77', dadAction: '參道好長。如果爸爸覺得遠，行到第一間 Starbucks 就入去坐低飲咖啡，其他人行入去參拜。', transportType: 'car', location: '太宰府天滿宮' },
-                            { id: 45, time: '17:30', title: 'Check-in Hotel Forza', category: 'hotel', desc: '泊 Center Parking (092-411-8866)', transportType: 'car', location: 'Hotel Forza Fukuoka Hakata-Guchi' },
-                            { id: 46, time: '19:30', title: '晚餐: 博多華味鳥', category: 'food', desc: 'Tel: 092-432-1801\n正宗水炊雞\n🟢 爸爸放心食雞肉蔬菜', dadAction: '酒店行過去 3 分鐘。有預約，直入坐低。', transportType: 'walk', location: '博多華味鳥 博多駅前店' }
+                            { id: 45, time: '17:30', title: 'Check-in JAL City 天神', category: 'hotel', desc: 'Tel: 092-712-7575\n就在赤坂站出口旁，樓下有便利店', transportType: 'car', location: 'Hotel JAL City Fukuoka Tenjin' },
+                            { id: 46, time: '19:30', title: '晚餐: 博多華味鳥', category: 'food', desc: 'Tel: 092-432-1801\n正宗水炊雞 (博多站前店)\n🅿️ 泊: Center Parking (092-411-8866)\n⚠️ 司機嚴禁飲酒', dadAction: '可以揸車！車駛到餐廳門口放低爸爸，爸爸入去坐，司機再去泊 Center Parking (行返黎 5 分鐘)。', transportType: 'car', location: '博多華味鳥 博多駅前店' }
                         ],
                          // Day 5: 4/13 福岡市區
                          [
-                            { id: 51, time: '09:30', title: '早餐: Komeda Coffee', category: 'food', desc: '朝日大廈 1F\n咖啡送多士', dadAction: '酒店行 2 分鐘。坐紅絨毛大梳化。', location: 'Komeda Coffee Hakata' },
+                            { id: 51, time: '09:30', title: '早餐: Komeda Coffee', category: 'food', desc: '天神大名店\n咖啡送多士', dadAction: '酒店附近行過去好近。', location: 'Komeda Coffee Tenjin Daimyo' },
                             { id: 52, time: '11:00', title: '櫛田神社', category: 'sightseeing', desc: 'Tel: 092-291-2951', dadAction: '車泊南門，行入去就係大殿。唔好行去川端通商店街（太遠）。', transportType: 'car', location: '櫛田神社' },
                             { id: 53, time: '12:00', title: '午餐: 季樂 (佐賀牛)', category: 'food', desc: 'Tel: 092-737-2122\n泊 DL Park 西中洲\n🟢 燒肉/蒸籠牛', dadAction: '餐廳在 2 樓，有電梯。', transportType: 'car', location: '季樂 博多店' },
                             { id: 54, time: '14:00', title: 'LaLaport 福岡', category: 'shopping', desc: 'Tel: 092-707-9820\n泊 South Entrance', dadAction: '商場極大。\n1. 入門口即刻搵 Cafe (如 Hoshino Coffee / Godiva)。\n2. 爸爸坐低飲野、食甜品。\n3. 媽媽姑姐去行街 Shopping，行完返黎接爸爸。', transportType: 'car', location: 'LaLaport Fukuoka' },
                             { id: 55, time: '18:30', title: '晚餐: 一蘭 天神西通り', category: 'food', desc: 'Tel: 092-713-6631\n⚠️ 爸爸絕對不能飲湯 (痛風紅燈)\n釜醬汁豚骨', dadAction: '1. 姑姐排隊。\n2. 爸爸在附近的「無印良品」或路邊花槽石壆坐住等。\n3. 快到時用 WhatsApp Call 爸爸過黎。', transportType: 'car', location: '一蘭 天神西通り店' },
-                            { id: 56, time: '21:00', title: '回酒店泊車', category: 'transport', desc: 'Center Parking', transportType: 'car' }
+                            { id: 56, time: '21:00', title: '回酒店 JAL City', category: 'transport', desc: '泊酒店或附近停車場', transportType: 'car' }
                         ],
-                        // Day 6: 4/14 回程 (更新 Full Full)
+                        // Day 6: 4/14 回程
                          [
                             { id: 61, time: '09:30', title: '早餐: M記/便利店', category: 'food', desc: '食熱包', transportType: 'walk' },
                             { id: 615, time: '10:00', title: 'Full Full 明太子包 (二選一)', category: 'food', desc: 'A. Hakata店 (10:00開): 爸爸車上等，媽媽衝落去買\nB. 本店 (08:00開): 免費泊車，爸爸坐露天茶座等', dadAction: '睇情況二選一。本店比較舒服，有位坐。', transportType: 'car', location: 'Full Full Hakata' },
                             { id: 62, time: '11:00', title: '福岡機場 國內線', category: 'shopping', desc: '泊國內線場 (092-621-6059)\n*任務: 買努努雞 -> 即入喼', dadAction: '泊好車後，爸爸在 2F 土產店附近的櫈坐，其他人去掃努努雞。', transportType: 'car', location: '福岡機場 國內線' },
                             { id: 63, time: '12:00', title: '午餐 (二選一)', category: 'food', desc: '3F 拉麵滑走路 / 餐廳層\nA. 一幸舍 (濃湯)\nB. Oyama 牛腸鍋\n⚠️ 兩間湯底都極邪惡，爸爸只可食料!', dadAction: '這裡也有機會排隊。同樣策略：爸爸坐櫈/排隊線外圍等。', transportType: 'walk', location: '福岡機場' },
-                            { id: 65, time: '13:45', title: '還車', category: 'transport', desc: '還車', transportType: 'car' },
+                            { id: 64, time: '13:30', title: '前往國際線 落客', category: 'transport', desc: '爸爸/媽媽/姑姐/行李 落車', transportType: 'car', location: '福岡機場 國際線' },
+                            { id: 65, time: '13:45', title: '姑丈去還車', category: 'transport', desc: '姑丈獨自去還車', transportType: 'car' },
                             { id: 66, time: '14:30', title: 'Check-in CX589', category: 'flight', desc: '回港 👋', transportType: 'walk' }
                         ]
                     ],
