--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <div class="absolute bottom-10 left-6 text-white text-shadow drop-shadow-md">
                 <h1 class="text-2xl font-bold tracking-widest">KYUSHU 2025</h1>
-                <p class="text-sm opacity-90"><i class="fa-solid fa-car mr-1"></i>V28 全方位執行書</p>
+                <p class="text-sm opacity-90"><i class="fa-solid fa-car mr-1"></i>九洲之旅2026</p>
             </div>
         </div>
 
@@ -150,7 +150,7 @@
                     
                     <div class="bg-red-50 rounded-2xl p-4 border border-red-100 text-red-800 shadow-sm">
                         <div class="font-bold mb-2 flex items-center"><i class="fa-solid fa-bullseye mr-2"></i>核心戰術</div>
-                        <p class="text-sm font-bold">門口落客 🚙 ➔ 長輩坐低休息 ☕ ➔ 姑丈去泊車 🅿️</p>
+                        <p class="text-sm font-bold">門口落客 🚙 ➔ 坐低休息 ☕ ➔ 姑丈去泊車 🅿️</p>
                         <div class="mt-2 text-xs opacity-90 border-t border-red-200 pt-2">
                             <p><strong>車手：</strong>爸爸 & 姑丈 (輪流揸)</p>
                             <p><strong>媽媽SOP：</strong>每日 07:00 酒店房食香蕉/蛋糕墊底！</p>
