--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <div class="absolute bottom-10 left-6 text-white text-shadow drop-shadow-md">
                 <h1 class="text-2xl font-bold tracking-widest">KYUSHU 2026</h1>
-                <p class="text-sm opacity-90"><i class="fa-solid fa-car mr-1"></i>V29 自駕執行書</p>
+                <p class="text-sm opacity-90"><i class="fa-solid fa-car mr-1"></i>2026 九洲自駕遊</p>
             </div>
         </div>
 
